--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,19 @@
 07_lab/check.sh
 06_lab/lab6
 03_lab/lab3
+04_lab/check.sh
+07_lab/graph
+07_lab/check.sh
+06_lab/lab6
+03_lab/lab3
+04_lab/check.sh
+07_lab/graph
+07_lab/check.sh
+06_lab/lab6
+03_lab/lab3
+04_lab/check.sh
+07_lab/graph
+07_lab/check.sh
+06_lab/lab6
+03_lab/lab3
+.vscode
