Solved the tasks

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,7 @@
-02_lab/cardgame
-03_lab/ex2
-03_lab/ex1
-03_lab/ex3
-03_lab/ex2
-03_lab/ex1
-03_lab/ex3
-04_lab/check.sh
-07_lab/check.sh
-06_lab/lab6
-03_lab/lab3
 04_lab/check.sh
 07_lab/graph
 07_lab/check.sh
 06_lab/lab6
-03_lab/lab3
-04_lab/check.sh
-07_lab/graph
-07_lab/check.sh
-06_lab/lab6
-03_lab/lab3
-04_lab/check.sh
-07_lab/graph
-07_lab/check.sh
-06_lab/lab6
+08_lab/main
 03_lab/lab3
 .vscode
