--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 08_lab/main
 03_lab/lab3
 .vscode
+04_lab/check.sh
+07_lab/graph
+07_lab/check.sh
+06_lab/lab6
+08_lab/main
+10_lab/check.sh
+09_lab/aux
+09_lab/check.sh
+03_lab/lab3
+.vscode
