--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,8 @@
         "tuple": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp"
-    }
+    },
+    "cSpell.ignoreWords": [
+        "treap"
+    ]
 }
